[package]
name = "engyn"
version = "0.1.0"
authors = ["Remco Kranenburg <remco@burgsoft.nl>"]

[dependencies]
argparse = "*"
bincode = "*"
cgmath = { version = "*", features = ["serde"] }
chrono = "*"
conrod = { version = "*", features = ["glium", "winit"] }
glium = { version = "*", features = ["glutin"] }
image = "*"
rand = "*"
rust-webvr = "*"
serde = "*"
serde_derive = "*"
time = "*"
tobj = "*"
