[package]
name = "engyn"
version = "0.1.0"
authors = ["Remco Kranenburg <remco@burgsoft.nl>"]

[dependencies]
argparse = "*"
bincode = "*"
cgmath = { version = "*", features = ["serde"] }
chrono = "*"
conrod = { version = "*", features = ["glium", "winit"] }
csv = "1.0.0-beta.5"
glium = { version = "*", features = ["glutin"] }
image = "*"
itertools = "*"
rand = "*"
rust-webvr = { path = "../rust-webvr/rust-webvr" }
serde = "*"
serde_derive = "*"
serde_yaml = "*"
time = "*"
tobj = "*"
